# game-library-exporter

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.bat  build.sh  exporter.py  gui.py  pyproject.toml
core/: config.py  epic.py  gog.py  output.py  steam.py
tests/: test_config.py  test_gog.py  test_output.py  test_steam.py
