[project]
name = "game-library-exporter"
version = "0.1.0"
description = ""
authors = [
    {name = "Incantator"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "certifi (>=2026.4.22,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.20.0,<7.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
